Added logo to navigation bar.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
-        <a href="#" class="navbar-brand"
-          >Shah Homeopathy Clinic</a
-        >
+        <a href="#" class="navbar-brand">
+          <img src="img/medicine_logo_32px.png">
+          Shah Homeopathy Clinic
+        </a>
 
         <button
           class="navbar-toggler"
