Adjusting margin and fixing white bar mobile issue

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         </div>
 
         <!-- Google Review Section Start -->
-          <div class="container m-5">
+          <div class="container">
             <div class="col-md-12 service-package" style="text-align: center;">
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
                 <script src="https://tutorialswebsite.com/cdn/google_places.js"></script>
@@ -385,7 +385,7 @@
                 });
                 </script>
                 
-                <a class="btn btn-success text-center" style="margin-top:20px; margin-right: 75px;" href="https://www.google.com/search?q=shah+homeopathic+clinic+milton&rlz=1C1GCEA_enUS815US815&oq=sh&aqs=chrome.0.69i59j69i57j69i61l2j69i65j69i60j69i65l2.353j0j1&sourceid=chrome&ie=UTF-8#lrd=0x882b6f39d41a1565:0x5885bfb8c5553952,1,,," target="_blank" rel="noopener noreferrer">
+                <a class="btn btn-success text-center" style="margin-top:80px;" href="https://www.google.com/search?q=shah+homeopathic+clinic+milton&rlz=1C1GCEA_enUS815US815&oq=sh&aqs=chrome.0.69i59j69i57j69i61l2j69i65j69i60j69i65l2.353j0j1&sourceid=chrome&ie=UTF-8#lrd=0x882b6f39d41a1565:0x5885bfb8c5553952,1,,," target="_blank" rel="noopener noreferrer">
                   See All Our Google Reviews
                 </a>
               </div> 
