--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
             </a>
           </div>
 
-          <!-- Instagram Icon and Linkage -->
-          <div class="m-2 b-1">
+          <!-- Instagram Icon and Linkage, todo - temporarily commented out -->
+          <!-- <div class="m-2 b-1">
             <a href="https://www.instagram.com/syedvakilahmed/"
             target="_blank" rel="noopener noreferrer">
             <i class="bi bi-instagram"></i>
             </a>
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -161,7 +161,7 @@
                         <div class="text-left">
                           <p>
                           <h3>Who is Mr. Shah?</h3>
-                          Since 2000, WE ARE WITH YOU!<br>
+                          Since 1997, WE ARE WITH YOU!<br>
                           With a vast practice of over 25 years, we have treated acute and chronic cases through homeopathy across the world.<br><br>
                           <h4>Canadian Homeopath</h4>
                           Syed Vakil Ahmed Shah is one of the leading registered Homeopaths® in Milton, Ontario, Canada.<br><br>
@@ -270,14 +270,14 @@
                       </div>
                       <div class="modal-body text-dark text-left">
                         <p>
-                          Dr. Shah’s experience as a Registered Homeopath® and Industrial Pharmacist along with being a 
-                          Research Scientist and Regional Director in Homeopathic Treatment and Pharmaceutical Manufacturing 
-                          allows us to provide unique expertise that helps treat acute and chronic diseases along with symptomatic 
-                          functional disorders. We provide you treatments based on individualized symptoms and constant support 
+                          Dr. Shah’s experience as a Registered Homeopath® and with over 30 years as an Industrial Pharmacist along with being a 
+                          Senior Research Scientist and Director of Pharmaceutical Manufacturing 
+                          allows us to provide unique expertise that helps treat <b>acute and chronic diseases</b> along with <b>symptomatic 
+                          functional disorders.</b> We provide you treatments based on individualized symptoms and constant support 
                           until you are satisfied. <br>
                           <br>
 
-                          As we have treated hundreds of patients across the world, we believe we can treat your individualized symptoms
+                          As we have treated hundreds of patients across the world, we believe <b>we can treat your individualized symptoms</b>
                           using homeopathic medicines at Shah Homeopathic Clinic. 
 
                         </p>
@@ -939,7 +939,8 @@
                 <span class="fw-bold">Phone</span> (226) 929-9310
               </li>
               <li class="list-group-item">
-                <span class="fw-bold">Email</span> vakil787@hotmail.com | vakil787@gmail.com
+                <span class="fw-bold">Email</span> vakil787@hotmail.com 
+                <!-- | vakil787@gmail.com -->
               </li>
 
               <!-- Facebook Icon and Linkage -->
@@ -954,8 +955,8 @@
                   </div>
                 </li>
 
-              <!-- Instagram Icon and Linkage -->
-                <li class="list-group-item">
+              <!-- Instagram Icon and Linkage, todo - temporarily commented out -->
+                <!-- <li class="list-group-item">
                   <div class="m-2">
                     <a href="https://www.instagram.com/syedvakilahmed/" 
                     class="nounderline"
@@ -964,7 +965,7 @@
                     <i class="bi bi-instagram text-secondary">  Shah Homeopathic Clinic Milton</i>
                     </a>
                   </div>
-                </li>
+                </li> -->
 
             </ul>
           </div>
