edited Calendly settings, instagram, added intake form, minor word edits

--- a/index.html
+++ b/index.html
@@ -398,11 +398,12 @@
     <section id="appointment" class="bg-light text-dark text-center p-5">
       <div class="container">
         <div class="col-md p-5">
-          <h2>Request an Appointment</h2>
+          <h2>REQUIRED: <a href="Forms/Intake_form.pdf">Intake form</a> must be completed<br>
+          before requesting an appointment<br></h2>
         </div>
         <div
           class="calendly-inline-widget"
-          data-url="https://calendly.com/shahhomeopathicclinic/30min?hide_gdpr_banner=1"
+          data-url="https://calendly.com/shahhomeopathicclinic/60min?hide_gdpr_banner=1"
           style="min-width: 320px; height: 925px"
         ></div>
         <script
@@ -791,7 +792,7 @@
               data-bs-parent="#questions"
             >
               <div class="accordion-body">
-                Cash or E-transfer.
+                Cash or E-transfer through vakil787@hotmail.com.
               </div>
             </div>
           </div>
@@ -815,7 +816,7 @@
               data-bs-parent="#questions"
             >
               <div class="accordion-body">
-                By Email (vakil787@hotmail.com), Phone call ((226) 929-9310), or book an appointment on the Calendly section above.
+                By Email (vakil787@hotmail.com), WhatsApp/Phone call ((226) 929-9310), or book an appointment on the Calendly section above.
               </div>
             </div>
           </div>
@@ -839,7 +840,7 @@
               data-bs-parent="#questions"
             >
               <div class="accordion-body">
-                A signed consent form with Q&A is filled out then emailed or dropped off at the clinic. 
+                A <a href="Forms/Intake_form.pdf">signed consent form</a> with Q&A is filled out then emailed or dropped off at the clinic. 
               </div>
             </div>
           </div>
@@ -887,7 +888,7 @@
               data-bs-parent="#questions"
             >
               <div class="accordion-body">
-                48 hours notice is required for a follow up appointment. Please Email (vakil787@hotmail.com), Phone call ((226) 929-9310), 
+                48 hours notice is required for a follow up appointment. Please Email (vakil787@hotmail.com), WhatsApp/Phone call ((226) 929-9310), 
                 or book an appointment on the Calendly section above.
               </div>
             </div>
@@ -931,15 +932,15 @@
             <h2 class="text-center mb-4">Contact Info</h2>
             <ul class="list-group list-group-flush lead">
               <li class="list-group-item">
-                <span class="fw-bold">Main Location</span> 307 Scott Boulevard,
+                <i class="bi bi-pin-map"></i><span class="fw-bold">Main Location</span> 307 Scott Boulevard,
                 <br>
                 Milton, ON, L9T 6Z7, Canada
               </li>
               <li class="list-group-item">
-                <span class="fw-bold">Phone</span> (226) 929-9310
+                <i class="bi bi-whatsapp"></i><span class="fw-bold"> WhatsApp/Phone</span> (226) 929-9310
               </li>
               <li class="list-group-item">
-                <span class="fw-bold">Email</span> vakil787@hotmail.com 
+                <i class="bi bi-envelope"></i><span class="fw-bold"> Email</span> vakil787@hotmail.com 
                 <!-- | vakil787@gmail.com -->
               </li>
 
@@ -950,7 +951,7 @@
                     class="nounderline" 
                     target="_blank" 
                     rel="noopener noreferrer">
-                    <i class="bi bi-facebook text-secondary m-2">  Shah Homeopathic Clinic Milton</i>
+                    <i class="bi bi-facebook text-secondary m-2"> Shah Homeopathic Clinic Milton</i>
                     </a>
                   </div>
                 </li>
