Changing overview image

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             </button>
           </div>
           <img
-            class="img-fluid w-50 d-none d-sm-block"
-            src="img/showcase.svg"
+            class="img-fluid w-50 d-none d-sm-block mb-5"
+            src="img/Clinic_photo.jpeg"
             alt=""
           />
         </div>
