Adding secondary email to contact section.

--- a/index.html
+++ b/index.html
@@ -940,8 +940,7 @@
                 <i class="bi bi-whatsapp"></i><span class="fw-bold"> WhatsApp/Phone</span> (226) 929-9310
               </li>
               <li class="list-group-item">
-                <i class="bi bi-envelope"></i><span class="fw-bold"> Email</span> vakil787@hotmail.com 
-                <!-- | vakil787@gmail.com -->
+                <i class="bi bi-envelope"></i><span class="fw-bold"> Email</span> vakil787@hotmail.com | vakil787@gmail.com
               </li>
 
               <!-- Facebook Icon and Linkage -->
