Temporarily disabled Calendly. Added clarification for contact.

--- a/index.html
+++ b/index.html
@@ -398,10 +398,13 @@
     <section id="appointment" class="bg-light text-dark text-center p-5">
       <div class="container">
         <div class="col-md p-5">
-          <h2>REQUIRED: <a href="Forms/Intake_form.pdf">Intake form</a> must be completed<br>
-          before requesting an appointment<br></h2>
+          <h2>REQUIRED: <a href="Forms/Intake_form.pdf">Intake form</a> 
+          must be completed and sent to <br>
+          vakil787@hotmail.com or (226) 929-9310 before requesting an appointment. <br>
+          <br> 
+          Please call (226) 929-9310 to book an appointment.</h2>
         </div>
-        <div
+        <!-- <div
           class="calendly-inline-widget"
           data-url="https://calendly.com/shahhomeopathicclinic/60min?hide_gdpr_banner=1"
           style="min-width: 320px; height: 925px"
@@ -410,7 +413,7 @@
           type="text/javascript"
           src="https://assets.calendly.com/assets/external/widget.js"
           async
-        ></script>
+        ></script> -->
       </div>
     </section>
     <!-- Calendly Inline Widget End -->
