--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
         <a href="#" class="navbar-brand text-primary">
-          <img src="img/homeopathic_logo_32px.png">
+          <img src="img/SHC_Logo.jpeg">
           Shah Homeopathic Clinic
         </a>
 
